--- a/src/resources/assets/raw/css/input.css
+++ b/src/resources/assets/raw/css/input.css
@@ -10,19 +10,20 @@
         @apply 
             border 
             border-gray-400/30 
-            px-4 
-            py-3 
+            py-3 px-4
             !outline-none
             !ring-0
             focus:outline-none 
             focus:border 
-            focus:border-gray-500 
-            mb-3 
-            text-sm 
-            placeholder-transparent
+            focus:border-blue-300 
+            mb-2
+            rounded-md 
             peer-placeholder-shown:mt-2
     }
-    .bw-form-tick:checked {
+    input.no-label{
+        @apply placeholder-transparent
+    }
+    .form-tick:checked {
         background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
         border-color: transparent;
         background-color: currentColor;
