--- a/src/resources/assets/raw/css/button.css
+++ b/src/resources/assets/raw/css/button.css
@@ -16,9 +16,9 @@
     }
     .bw-button.small {
         @apply 
-            py-2
-            px-4
-            !text-xs
+            py-3
+            px-6
+            !text-[11px] 
     }
     .bw-button.tiny {
         @apply 
