--- a/src/resources/assets/raw/css/table.css
+++ b/src/resources/assets/raw/css/table.css
@@ -1,17 +1,17 @@
 @layer components {
     .bw-table.divided tr {
-        @apply  border-t border-gray-200 border-b-8 border-b-gray-200/40
+        @apply  border-t border-gray-200 dark:border-gray-400 border-b-8 border-b-gray-200/40 dark:border-b-gray-400/40
     }
     .bw-table.divided.thin tr {
-        @apply  border-t border-gray-200 border-b border-b-gray-200/60
+        @apply  border-t border-gray-200 dark:border-gray-400 border-b border-b-gray-200/60 dark:border-b-gray-400/60
     }
     .bw-table.striped tr:nth-child(even)>td, .bw-table.striped tr:nth-child(even):hover>td{
-        @apply bg-gray-50
+        @apply bg-gray-50 dark:bg-slate-300
     }
     thead>tr>th {
         @apply
-        bg-white
-        text-black/80
+        bg-white dark:bg-slate-500
+        text-black/80 dark:text-white/80
         text-left
         text-xs
         uppercase
@@ -24,22 +24,22 @@
         @apply
         p-5
         align-top
-        leading-8 text-gray-500 bg-white
+        leading-8 text-gray-500 dark:text-slate-800 bg-white dark:bg-slate-400
     }
     .bw-table td.double-underline {
-        @apply border-b-4 border-double border-black/30
+        @apply border-b-4 border-double border-black
     }
     table.with-hover-effect tr:hover>td:first-child {
-        @apply bg-white border-l-2 border-l-green-300
+        @apply border-l-2 border-l-green-300 dark:border-l-slate-800
     }
     table.with-hover-effect tr:hover>td:last-child {
-        @apply bg-white border-r-2 border-r-green-300
+        @apply border-r-2 border-r-green-300 dark:border-r-slate-800
     }
     table.with-hover-effect tr>td:first-child {
-        @apply bg-white border-l-2 border-l-white
+        @apply border-l-2 border-l-white
     }
     table.with-hover-effect tr>td:last-child {
-        @apply bg-white border-r-2 border-r-white
+        @apply border-r-2 border-r-white
     }
     table.with-hover-effect tr:nth-child(even)>td:first-child {
         @apply border-l-2 border-l-gray-50
@@ -48,10 +48,10 @@
         @apply border-r-2 border-r-gray-50
     }
     table.with-hover-effect tr:nth-child(even):hover>td:first-child {
-        @apply border-l-2 border-l-green-300
+        @apply border-l-2 border-l-green-300 dark:border-l-slate-800
     }
     table.with-hover-effect tr:nth-child(even):hover>td:last-child {
-        @apply border-r-2 border-r-green-300
+        @apply border-r-2 border-r-green-300 dark:border-r-slate-800
     }
 
 }
