--- a/src/resources/assets/raw/css/table.css
+++ b/src/resources/assets/raw/css/table.css
@@ -20,11 +20,17 @@
         px-5 py-4
         border-t border-gray-200/20
     }
+    .bw-table.compact thead>tr>th {
+        @apply !py-1
+    }
     .bw-table tr>td {
         @apply
         p-5
         align-top
         leading-8 text-gray-500 dark:text-slate-800 bg-white dark:bg-slate-400
+    }
+    .bw-table.compact tr>td {
+        @apply !py-1 !leading-6
     }
     .bw-table td.double-underline {
         @apply border-b-4 border-double border-black
