--- a/src/resources/assets/raw/css/button.css
+++ b/src/resources/assets/raw/css/button.css
@@ -7,7 +7,8 @@
             text-xs 
             uppercase 
             tracking-widest
-            rounded-full
+            rounded-full 
+            inline-block
     }
     .bw-button.big {
         @apply 
