--- a/src/resources/assets/raw/css/dropdown.css
+++ b/src/resources/assets/raw/css/dropdown.css
@@ -5,8 +5,7 @@
             border 
             border-gray-400/30 
             rounded-md
-            px-4 
-            py-3 
+            p-4
             !outline-none
             !ring-0
             focus:outline-none 
