--- a/resources/assets/css/dropdown.css
+++ b/resources/assets/css/dropdown.css
@@ -1,6 +1,5 @@
 @layer components {
-    button.bw-dropdown,
-    select {
+    button.bw-dropdown{
         @apply
             border
             border-gray-400/30
@@ -14,5 +13,13 @@
             text-sm
             placeholder-transparent
             peer-placeholder-shown:mt-2
+    }
+
+    .bw-raw-select {
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236B7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
+        background-position: right .5rem center;
+        /*background-repeat: no-repeat !important;*/
+        background-size: 1.5em 1.5em;
+        @apply bg-no-repeat appearance-none bg-white border border-slate-200 text-slate-400 text-sm rounded-md focus:border-gray-300 block w-full p-4 h-[54px]
     }
 }
