--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -27,12 +27,12 @@
             peer-placeholder-shown:top-[18px]
             peer-focus:-top-2
     }
-    .form-tick:checked {
-        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
-        border-color: transparent;
-        background-color: currentColor;
-        background-size: 100% 100%;
-        background-position: 50%;
-        background-repeat:no-repeat
-    }
+    /*.form-tick:checked {
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e") !important;
+        border-color: transparent !important;
+        background-color: currentColor !important;
+        background-size: 100% 100% !important;
+        background-position: 50% !important;
+        background-repeat:no-repeat !important;
+    }*/
 }
