--- a/resources/assets/css/table.css
+++ b/resources/assets/css/table.css
@@ -1,58 +1,53 @@
 @layer components {
     .bw-table.divided tr {
-        @apply  border-t border-gray-200 dark:border-gray-300 border-b-8 border-b-gray-200/40 dark:border-b-gray-400/40
+        @apply  border-t border-gray-200 border-b-8 border-b-gray-200/40 dark:border-b-slate-800/40
     }
     .bw-table.divided.thin tr {
-        @apply  border-t border-gray-200 dark:border-gray-300 border-b border-b-gray-200/60 dark:border-b-gray-400/50
+        @apply border-b border-t border-gray-200 border-b-gray-200/60 dark:border-b-slate-800
     }
     .bw-table.striped tr:nth-child(even)>td, .bw-table.striped tr:nth-child(even):hover>td{
-        @apply bg-gray-50 dark:bg-slate-300
+        @apply bg-gray-50 dark:bg-slate-900/60
     }
     .bw-table thead>tr>th {
         @apply
-        bg-white dark:bg-slate-500
-        text-black/80 dark:text-white/80
+        bg-white dark:bg-slate-800
+        text-black/80 dark:text-slate-400
         text-left
         text-xs
         uppercase
         font-semibold
         tracking-widest
         px-5 py-4
-        border-t border-gray-200/20
+        border-t border-gray-200/20 
     }
     .bw-table.compact thead>tr>th {
         @apply !py-2
     }
     .bw-table tr>td {
-        @apply
-        p-5
-        align-top
-        text-slate-600/80
-        text-sm
-        dark:text-slate-800 bg-white dark:bg-slate-400 leading-6
+        @apply p-5 align-top text-slate-600/80 text-sm leading-6 bg-white dark:text-slate-400 dark:bg-slate-900
     }
     .bw-table.compact tr>td {
         @apply !py-2 /*!leading-6*/
     }
     .bw-table td.double-underline {
-        @apply border-b-4 border-double border-black
-    }
-    table.with-hover-effect tr:hover>td:first-child {
-        @apply border-l-2 border-l-green-300
-    }
-    table.with-hover-effect tr:hover>td:last-child {
-        @apply border-r-2 border-r-green-300
+        @apply border-b-4 border-double border-black dark:border-slate-700 border-separate
     }
     table.with-hover-effect tr>td:first-child {
         @apply border-l-2 border-l-white dark:border-l-transparent
     }
+    table.with-hover-effect tr:hover>td:first-child {
+        @apply border-l-2 border-l-green-300 dark:border-l-slate-700
+    }
     table.with-hover-effect tr>td:last-child {
         @apply border-r-2 border-r-white dark:border-r-transparent
     }
+    table.with-hover-effect tr:hover>td:last-child {
+        @apply border-r-2 border-r-green-300 dark:border-r-slate-700
+    }
     table.with-hover-effect tr:nth-child(even):hover>td:first-child {
-        @apply border-l-2 border-l-green-300
+        @apply border-l-2 border-l-green-300 dark:border-l-slate-700
     }
     table.with-hover-effect tr:nth-child(even):hover>td:last-child {
-        @apply border-r-2 border-r-green-300
+        @apply border-r-2 border-r-green-300 dark:border-r-slate-700
     }
 }
