--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -6,10 +6,10 @@
             !outline-none
             !ring-0
             border-2 
-            w-full text-slate-600 border-slate-300/50 dark:text-slate-300 dark:border-slate-700 dark:bg-slate-800
+            w-full text-slate-600 border-slate-300/50 dark:text-dark-300 dark:border-dark-700 dark:bg-dark-800
             focus:outline-none
             focus:border-2
-            focus:border-blue-400 dark:focus:border-slate-600 dark:placeholder-slate-500/70 transition-all
+            focus:border-primary-400 dark:focus:border-dark-600 dark:placeholder-dark-500/70 transition-all
             rounded-md
             text-sm
             p-4
@@ -27,9 +27,9 @@
             px-1
             transition-all
             peer-placeholder-shown:top-[19px]
-            peer-focus:-top-2 bg-white text-blue-900/40 dark:text-slate-500 z-20 dark:bg-slate-800
+            peer-focus:-top-2 bg-white text-primary-900/40 dark:text-dark-500 z-20 dark:bg-dark-800
     }
     .prefix svg, .suffix svg {
-        @apply !mr-1 w-6 h-6 dark:text-slate-500
+        @apply !mr-1 w-6 h-6 dark:text-dark-500
     }
 }
