--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -1,5 +1,5 @@
 @import './button.css';
-@import './datepicker.css';
+/*@import './datepicker.css';*/
 @import './dropdown.css';
 @import './input.css';
 @import './popup.min.css';
