--- a/resources/assets/css/button.css
+++ b/resources/assets/css/button.css
@@ -20,9 +20,13 @@
     }
 
     .bw-button.secondary, .bw-button-circle.secondary {
-        @apply focus:ring-offset-2 focus:ring-secondary-500/40 active:translate-y-0.5 transition bg-secondary-300
+        @apply focus:ring-offset-2 focus:ring-secondary-300/40 active:translate-y-0.5 transition bg-secondary-300
         dark:bg-dark-700 text-secondary-800 dark:text-dark-400 hover:bg-secondary-400 hover:text-white
         hover:dark:bg-dark-400/50 hover:dark:text-dark-300 active:bg-secondary-700 dark:focus:ring-dark-800
+    }
+
+    .bw-button.secondary.outlined, .bw-button-circle.secondary.outlined {
+        @apply !bg-transparent border-secondary-300 hover:border-secondary-400 text-secondary-700 hover:text-secondary-800
     }
 
     .bw-button.disabled, .bw-button-circle.disabled {
